--- a/auction-website-frontend/src/app/login/Login.module.css
+++ b/auction-website-frontend/src/app/login/Login.module.css
@@ -2,7 +2,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 50vh;
+  min-height: 60vh;
+  min-width: 60dvh;
+  padding: 10rem;
+
 }
 
 .signin {
@@ -34,7 +37,6 @@
   background-color: #8b4513; /* SaddleBrown color for a classic look */
   border-radius: 5px;
   color: white;
-  font-family: "Georgia", serif; /* Classic font */
   font-size: 16px;
   font-weight: bold;
   transition: background-color 0.3s, transform 0.3s;
